--- a/package.json
+++ b/package.json
@@ -23,13 +23,18 @@
   },
   "homepage": "https://github.com/Samarjiit/secondChance#readme",
   "dependencies": {
+    "@paypal/react-paypal-js": "^7.8.3",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "http-proxy-middleware": "^2.0.6",
+    "instamojo-nodejs": "^0.0.5",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.2"
+    "mongoose": "^7.0.2",
+    "razorpay": "^2.8.6"
   },
   "devDependencies": {
     "concurrently": "^7.6.0",
