--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+SKIP_PREFLIGHT_CHECK=true
 NODE_ENV=development
 PORT=5000
 MONGO_URI='mongodb+srv://hisamarmahi:tCJJFzmcYZY2shZC@second.mmeub6h.mongodb.net/secondchance?retryWrites=true&w=majority'
