--- a/package.json
+++ b/package.json
@@ -31,12 +31,10 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "http-proxy-middleware": "^2.0.6",
-    "instamojo-nodejs": "^0.0.5",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "mongoose": "^7.0.2",
-    "multer": "^1.4.5-lts.1",
-    "razorpay": "^2.8.6"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "concurrently": "^7.6.0",
